--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --silent=false",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
@@ -22,9 +23,13 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.0",
+    "@jest/globals": "^29.5.0",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.0.1",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.0.5"
   }
 }
